--- a/tmux.conf
+++ b/tmux.conf
@@ -7,4 +7,20 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 set -g default-terminal "screen-256color"
-set -g mode-mouse on
+setw -g aggressive-resize on
+
+# keybindings to make resizing easier
+bind -r C-h resize-pane -L
+bind -r C-j resize-pane -D
+bind -r C-k resize-pane -U
+bind -r C-l resize-pane -R
+
+# easily toggle synchronization (mnemonic: e is for echo)
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
+# enable mouse mode
+set-option -g mouse-select-pane off 
+set-option -g mouse-resize-pane off 
+set-option -g mouse-select-window off 
+set-window-option -g mode-mouse off
